# simple-chat

./: Cargo.toml
src/: client.rs  lib.rs  server.rs
tests/: integration_test.rs
